--- a/ProjectGamma/Config/DefaultEngine.ini
+++ b/ProjectGamma/Config/DefaultEngine.ini
@@ -1,6 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TestLevel.TestLevel
 GameDefaultMap=/Game/TestLevel.TestLevel
+GlobalDefaultGameMode=/Game/CyberNinjaWolf/Blueprints/GM_CyberNinjaWolf.GM_CyberNinjaWolf_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ProjectGamma")
