created basic enemy class and Spawn Volume class.  Spawn volume will space a BasicEnemy_BP class

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,16 @@ DerivedDataCache/*
 Project01/Content/GenericNPCAnimPack/
 *.zip
 *.fbx
+ProjectGamma/Source/UE4_MocapOnline_Tech_Notes.txt
+ProjectGamma/Source/SKMannequin_T_Pose/UE4_Mannequin_occlusion.jpg
+ProjectGamma/Source/SKMannequin_A_Pose/SK_Mannequin_A_Pose_README.txt
+ProjectGamma/Source/Motionbuilder/SK_Mannequin_Edit_Template.fbm/UE4_Mannequin_occlusion.jpg
+ProjectGamma/Source/Maya/SK_Mannequin_HIK_Edit_Template.mb
+ProjectGamma/Content/CaveTrollLight/Textures/desktop.ini
+ProjectGamma/Content/CaveTrollLight/Materials/desktop.ini
+ProjectGamma/Content/CaveTrollLight/Maps/desktop.ini
+ProjectGamma/Source/SK_Mannequin_A_Pose_README.txt
+ProjectGamma/Source/SKMannequin_A_Pose/UE4_Mannequin_occlusion.jpg
+ProjectGamma/MCO_Mocap_Basics.png
+ProjectGamma/Source/SK_Mannequin_T_Pose_README.txt
+ProjectGamma/Source/SKMannequin_T_Pose/SK_Mannequin_T_Pose_README.txt
