Included idle particles, overlap particles, and sound to Item, Pickup, and Trap.  Create 1st draft of main game play HUD and added to MainPlayerController.

--- a/ProjectGamma/Config/DefaultEngine.ini
+++ b/ProjectGamma/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/TestLevel.TestLevel
 GameDefaultMap=/Game/TestLevel.TestLevel
-GlobalDefaultGameMode=/Game/CyberNinjaWolf/Blueprints/GM_CyberNinjaWolf.GM_CyberNinjaWolf_C
+GlobalDefaultGameMode=/Game/_Blueprints/ProjectGammaGameMode.ProjectGammaGameMode_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/ProjectGamma")
